# gilded-rose-kata-c

./: .gitignore  CMake.mk  CMakeLists.txt  GildedRose.c  GildedRose.h  GildedRoseTextTests.c  GildedRoseUnitTests.cc  GildedRose_Internal.c  GildedRose_Internal.h  GildedRose_Quality.c  GildedRose_Quality.h  LEARNING.md  README.md  README.txt  text-tests.expected.txt
githooks/: pre-commit  pre-push
